--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,11 @@
               <button class="button button-secondary">Стоп</button>
             </div>
           </div>
-          <form class="task-form" action="submit">
+          <!-- <form class="task-form" action="submit">
             <input type="text" class="task-name input-primary" name="task-name" id="task-name" placeholder="название задачи">
             <button type="button" class="button button-importance default" aria-label="Указать важность"></button>
             <button type="submit" class="button button-primary task-form__add-button">Добавить</button>
-          </form>
+          </form> -->
         </div>
         <div class="pomodoro-tasks">
           <p class="pomodoro-tasks__header-title">
